--- a/common/data.tex
+++ b/common/data.tex
@@ -13,7 +13,7 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{MPI. Решение системы линейных уравнений методом Гаусса .}{MPI.	Решение системы линейных уравнений методом Гаусса .}}
+{\texorpdfstring{MPI.Решение 2х-мерной задачи симуляции жидкости (газа) методом решеточных уравнений Больцмана.}{MPI.Решение 2х-мерной задачи симуляции жидкости (газа) методом решеточных уравнений Больцмана.}}
 \newcommand{\courseName}
 {Параллельные языки программирования}
 \newcommand{\labNumber}
