--- a/LabWork.tex
+++ b/LabWork.tex
@@ -18,7 +18,10 @@
 \input{biblio/bibliopreamble}% Настройки библиографии из внешнего файла (там же выбор: встроенная или на основе biblatex)
 
 \usepackage{pgfplots}
+
 \usepackage{csvsimple}
+\usepackage{amsmath}
+
 
 \input{Dissertation/inclusioncontrol}    % Управление компиляцией отдельных частей диссертации
 \usepackage[section]{placeins}
