Title prepared for future works

--- a/common/data.tex
+++ b/common/data.tex
@@ -13,9 +13,9 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
+{\texorpdfstring{Технология автоматического распознавания образов. OCR-системы.}{Технология автоматического распознавания образов. OCR-системы.}}
 \newcommand{\courseName}
-{Название Предмета}
+{Программное обеспечение искусственного интеллекта}
 \newcommand{\labNumber}
 {1}
 \newcommand{\thesisCity}               % Диссертация, город защиты
@@ -26,9 +26,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Фамилия Имя Отчество}
+{Варшавский Павел Романович}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
+{П.Р.~Варшавский}
 
 
 % To avoid conflict with beamer class use \providecommand
